<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>

<variable
    name="catchmood"
    type="com.example.moody.MainActivity" />

<variable
    name="score"
    type="String" />

<variable
    name="time"
    type="String" />
</data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mainbg" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/tvScore"
                android:layout_width="162dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:background="#5B8368B3"
                android:fontFamily="@font/carter_one"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:text="@{score}"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.045" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="193dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="5dp"
                android:background="#5B8368B3"
                android:fontFamily="@font/carter_one"
                android:paddingStart="9dp"
                android:paddingEnd="7dp"
                android:text="@{time}"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.935"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.044" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="368dp"
                android:layout_height="384dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivLaugh"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="0"
                    app:layout_row="0"
                    app:srcCompat="@drawable/laugh" />

                <ImageView
                    android:id="@+id/ivLove"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="1"
                    app:layout_row="0"
                    app:srcCompat="@drawable/love" />

                <ImageView
                    android:id="@+id/ivSmile"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="2"
                    app:layout_row="0"
                    app:srcCompat="@drawable/smile" />

                <ImageView
                    android:id="@+id/ivCare"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="0"
                    app:layout_row="1"
                    app:srcCompat="@drawable/care" />

                <ImageView
                    android:id="@+id/ivAngry"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="1"
                    app:layout_row="1"
                    app:srcCompat="@drawable/angry" />

                <ImageView
                    android:id="@+id/ivPain"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="2"
                    app:layout_row="1"
                    app:srcCompat="@drawable/pain" />

                <ImageView
                    android:id="@+id/ivEmotion"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="0"
                    app:layout_row="2"
                    app:srcCompat="@drawable/emotion" />

                <ImageView
                    android:id="@+id/ivWow"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="1"
                    app:layout_row="2"
                    app:srcCompat="@drawable/wow" />

                <ImageView
                    android:id="@+id/ivSad"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fruit"
                    android:onClick="@{() -> catchmood.increaseScore()}"
                    app:layout_column="2"
                    app:layout_row="2"
                    app:srcCompat="@drawable/sad" />

            </androidx.gridlayout.widget.GridLayout>

            <Button
                android:id="@+id/playbutton"
                android:layout_width="112dp"
                android:layout_height="68dp"
                android:backgroundTint="#673AB7"
                android:fontFamily="@font/carter_one"
                android:text="@string/play"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="@+id/gridLayout"
                app:layout_constraintTop_toBottomOf="@+id/tvTime"
                app:layout_constraintVertical_bias="0.856" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#77000000"
                android:fontFamily="@font/boogaloo"
                android:paddingStart="60dp"
                android:paddingTop="5dp"
                android:paddingEnd="60dp"
                android:paddingBottom="5dp"
                android:text="@string/catch_the_mood"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.066" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
    </layout>